Added multiple connections
Added database to persist connections
Added component to add/edit connections
Added new component to manage all connections
Refactored application

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -11,4 +11,6 @@ pgpubsub = "*"
 flask-socketio = "*"
 flask-cors = "*"
 pyinstaller = "*"
-
+flask-sqlalchemy = "*"
+flask-marshmallow = "*"
+marshmallow-sqlalchemy = "*"
