--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
-      - name: Installing project dependencies
+      - name: Moving in correct directory
       - run: cd client
+      - name: Installing project dependencies
       - run: npm install
       - name: Building the project
       - run: npm run build
