--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
       - name: Moving in correct directory
-      - run: cd client
+        run: cd client
       - name: Installing project dependencies
-      - run: npm install
+        run: npm install
       - name: Building the project
-      - run: npm run build
+        run: npm run build
