--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,47 +1,25 @@
-autopep8==1.5
-backcall==0.2.0
-bandit==1.6.2
-blessings==1.7
-certifi==2019.11.28
-colorama==0.4.3
-decorator==4.4.2
-flake8==3.8.3
-gitdb==4.0.5
-GitPython==3.1.3
-ipykernel==5.3.0
-ipython==7.16.1
-ipython-genutils==0.2.0
-jedi==0.17.1
-jupyter-client==6.1.5
-jupyter-core==4.6.3
-mccabe==0.6.1
-mypy-extensions==0.4.3
-parso==0.7.0
-pbr==5.4.5
-pickleshare==0.7.5
-pipenv==2018.11.26
-prompt-tool-kit==1.0.14
-prompt-toolkit==3.0.5
-psutil==5.6.7
-pycodestyle==2.6.0
-pyflakes==2.2.0
-Pygments==2.5.2
-PyInquirer==1.0.3
-python-dateutil==2.8.1
-python-editor==1.0.4
-pywin32==227
-PyYAML==5.3.1
-pyzmq==19.0.1
-readchar==2.0.1
-regex==2020.1.8
-six==1.14.0
-smmap==3.0.4
-stevedore==2.0.0
-tornado==6.0.4
-traitlets==4.3.3
-typed-ast==1.4.1
-typing-extensions==3.7.4.2
-virtualenv==16.7.9
-virtualenv-clone==0.5.3
-wcwidth==0.1.8
-WMI==1.4.9
+altgraph==0.17
+click==7.1.2
+dnspython==1.16.0
+Flask==1.1.2
+Flask-Cors==3.0.8
+flask-marshmallow==0.13.0
+Flask-SocketIO==4.3.1
+Flask-SQLAlchemy==2.4.4
+future==0.18.2
+greenlet==0.4.16
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+marshmallow==3.7.1
+marshmallow-sqlalchemy==0.23.1
+monotonic==1.5
+pefile==2019.4.18
+psycopg2==2.8.5
+pyinstaller-hooks-contrib==2020.7
+python-engineio==3.13.2
+python-socketio==4.6.0
+pywin32-ctypes==0.2.0
+six==1.15.0
+SQLAlchemy==1.3.19
+Werkzeug==1.0.1
