--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,15 @@ jobs:
       - name: Building the project
         working-directory: ./client
         run: npm run build
+        
+
+      - uses: actions/checkout@v2
+
+      - uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: my-artifact
+
+      - name: Display structure of downloaded files
+        run: ls -R
