--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,22 +1,35 @@
-altgraph==0.17
-click==7.1.2
-Flask==1.1.2
-Flask-Cors==3.0.9
-flask-marshmallow==0.14.0
+appdirs==1.4.4
+bitstring==3.1.7
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
+cryptography==3.3.2
+distlib==0.3.2
+distro==1.5.0
+ecdsa==0.17.0
+esptool==3.1
+filelock==3.0.12
+Flask==2.0.1
 Flask-SocketIO==4.3.1
-Flask-SQLAlchemy==2.4.4
-future==0.18.2
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-marshmallow==3.8.0
-marshmallow-sqlalchemy==0.23.1
-pefile==2019.4.18
-psycopg2==2.8.6
-pyinstaller-hooks-contrib==2020.7
+idna==2.10
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+matrix-client==0.3.2
+pipenv==2021.5.29
+pycparser==2.20
+pyOpenSSL==20.0.1
+pyserial==3.5
 python-engineio==3.13.2
 python-socketio==4.6.0
-pywin32-ctypes==0.2.0
-six==1.15.0
-SQLAlchemy==1.3.19
-Werkzeug==1.0.1
+reedsolo==1.5.4
+requests==2.25.1
+selenium==3.141.0
+six==1.16.0
+urllib3==1.26.4
+virtualenv==20.4.7
+virtualenv-clone==0.5.4
+Werkzeug==2.0.1
+zulip==0.7.1
