--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
+    "axios": "^0.21.4",
+    "core-js": "^3.17.3",
     "node-forge": "^0.10.0",
     "prismjs": "^1.23.0",
     "vue": "^2.6.11",
@@ -28,11 +28,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
+    "sass": "~1.32",
+    "sass-loader": "^10.1.1",
     "vue-cli-plugin-vuetify": "~2.0.6",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.7.3"
   },
   "eslintConfig": {
     "root": true,
