--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,4 +1,8 @@
-FROM python:3.9
+FROM python:3.9-slim
+
+RUN apt-get update \
+    && apt-get -y install libpq-dev gcc \
+    && pip install psycopg2
 
 RUN pip install pipenv
 
