--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y \
     gcc \
 && rm -rf /var/lib/apt/lists/*
 
-RUN pip install psycopg2 pipenv
+RUN pip install pipenv
 
 COPY Pipfile* .
 
