Reworked docker deploy
Added DEV and PROD mode
DEV mode starts backend with debugger enabled
Using waitress to serve application in PROD mode
Added environment to docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   backend:
     container_name: pgtools-backend
     image: pgtools-backend:latest
+    environment:
+      - MODE=PROD
     build: ./server
     ports:
       - "5000:5000"
