--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,9 @@
     "core-js": "^3.17.3",
     "node-forge": "^0.10.0",
     "prismjs": "^1.23.0",
+    "socket.io-client": "^4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vue-socket.io": "^3.0.9",
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1"
   },
