Migrated to NodeJS backend
Reimplementation of all functions in NodeJS
Adapted client-code to the backend changes
Updated docker-compose file
Refactored some frontend components
Added navigation drawer
Reworked various components

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ build.zip
 /server/.vscode
 /server/blueprints/__pycache__
 
-/node-server/node_modules
-node-server/config.json
+/server/node_modules
+server/config.json
