--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -23,7 +23,8 @@ COPY --from=build-stage /usr/src/app/build ./build
 
 RUN mkdir output
 RUN mkdir temp
-RUN npm install pm2 -g
 
 
-CMD [ "pm2-runtime", "./build/index.js" ]
+RUN mkdir -p /app/config
+
+CMD [ "node", "./build/index.js" ]
