--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "prismjs": "^1.25.0",
     "socket.io-client": "^4.2.0",
     "vue": "^2.6.11",
+    "vue-prism-editor": "^1.3.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1"
